[tool.poetry]
name = "hotpot"
version = "0.1.0"
description = ""
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
tqdm = "^4.48.2"
ipython = "^7.18.0"
pandas = "^1.1.1"
ujson = "^3.1.0"
pyarrow = "^1.0.1"
jieba = "^0.42.1"
fasttext = "^0.9.2"
scipy = "^1.5.2"
tables = "^3.6.1"
opencc = "1.1.1"
pyahocorasick = "^1.4.0"
sklearn = "^0.0"
matplotlib = "^3.3.1"
lightgbm = "^2.3.1"
gensim = "^3.8.3"
annoy = "^1.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
